maintain: add lastused to access key api and cli
