# api/access_key.go
@@ -8,6 +8,7 @@ import (
 type AccessKey struct {
 	ID                uid.ID `json:"id"`
 	Created           Time   `json:"created"`
+	LastUsed          Time   `json:"lastUsed"`
 	Name              string `json:"name"`
 	IssuedForName     string `json:"issuedForName"`
 	IssuedFor         uid.ID `json:"issuedFor"`
@@ -48,6 +49,7 @@ func (r CreateAccessKeyRequest) ValidationRules() []validate.ValidationRule {
 type CreateAccessKeyResponse struct {
 	ID                uid.ID `json:"id"`
 	Created           Time   `json:"created"`
+	LastUsed          Time   `json:"lastUsed"`
 	Name              string `json:"name"`
 	IssuedFor         uid.ID `json:"issuedFor"`
 	ProviderID        uid.ID `json:"providerID"`
