# docs/api/openapi3.json
@@ -37,6 +37,12 @@
             "pattern": "[1-9a-km-zA-HJ-NP-Z]{1,11}",
             "type": "string"
           },
+          "lastUsed": {
+            "description": "formatted as an RFC3339 date-time",
+            "example": "2022-03-14T09:48:00Z",
+            "format": "date-time",
+            "type": "string"
+          },
           "name": {
             "type": "string"
           },
@@ -448,6 +454,12 @@
                   "type": "string"
                 },
                 "issuedForName": {
+                  "type": "string"
+                },
+                "lastUsed": {
+                  "description": "formatted as an RFC3339 date-time",
+                  "example": "2022-03-14T09:48:00Z",
+                  "format": "date-time",
                   "type": "string"
                 },
                 "name": {
